tests/v0-fail/expect_mismatch.out
Running <root>/expect_mismatch.cli ...

printf "hello\n"
---
hello
---
❌ FAIL (output shouldn't match)
 → printf "hello\n"

<root>/expect_mismatch.cli FAILED
Error: expected failure, but passed at line <root>/expect_mismatch.cli:3

