tests/v0-fail/expect_mismatch.cli
#!/usr/bin/env clitest --v0

$ echo "hello"
%EXPECT_FAILURE
! hello
